--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass --watch ./scss/style.scss:./css/style.css --style compressed",
     "build": "webpack",
-    "start": "node server.js"
+    "start": "node backend/server.js"
   },
   "author": "Florian R.",
   "license": "ISC",
